# pro-tools-plugin-sync

./: .gitignore  AGENTS.md  Pro Tools Plugin Sync.spec  README.md  pyproject.toml
.github/workflows/: build-dmg.yml
docs/: example_combined_report.html  example_update_report.html
scripts/: build  build_local  release  setup.sh  test  test.sh
src/pt_plugin_sync/: __init__.py  auto_update.py  cli.py  combined_report.py  comparison_report.py  config.py  daemon.py  diffing.py  dropbox_auth.py  dropbox_store.py  launchd.py  menubar.py  menubar_app.py  report_naming.py  report_store.py  reporting.py  scan_cycle.py  scanner.py  settings_server.py  settings_window.py  update_check.py  update_report.py
src/pt_plugin_sync/resources/: __init__.py  app_icon.icns
tests/: conftest.py  test_auto_update.py  test_cli.py  test_combined_report.py  test_config.py  test_config_setup.py  test_daemon.py  test_diffing.py  test_dropbox_auth.py  test_dropbox_store.py  test_launchd.py  test_menubar.py  test_report_naming.py  test_report_store.py  test_reporting.py  test_scan_cycle.py  test_scanner.py  test_settings_server.py  test_settings_window.py  test_update_check.py  test_update_report.py
tests/fixtures/plugins/: README.txt
tests/fixtures/plugins/Alpha.aaxplugin/Contents/: Info.plist
tests/fixtures/plugins/Alpha.aaxplugin/Contents/MacOS/: Alpha
tests/fixtures/plugins/Beta.aaxplugin/Contents/MacOS/: Beta
tests/plugins/Beta.aaxplugin/Contents/: Info.plist
tests/plugins/xxx.aaxplugin/Contents/MacOS/: Gamma
tests/plugins/zzzz.aaxplugin/Contents/: Info.plist
